--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1st For All</title>
+  <title>Free Ed Awareness</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="text-container">
-    </div>
+  <div class="container">
+    <h1 class="title">Insert Title Here</h1>
+    <h2 class="subtitle">Insert Subtitle Here</h2>
+    <p class="text-box">Insert your text here. This is where you can add your main content.</p>
+  </div>
 </body>
 </html>
