--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">Insert Title Here</h1>
-    <h2 class="subtitle">Insert Subtitle Here</h2>
-    <p class="text-box">Insert your text here. This is where you can add your main content.</p>
+    <h1 class="title">Freedom of Speech in Education</h1>
+    <h2 class="subtitle">APUSH Social Issue Project</h2>
+    <p class="text-box">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past, and especially in recent years, these freedoms have been the target of numerous other policies and social campaigns.</p>
   </div>
 </body>
 </html>
