--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <h1 class="title">Freedom of Speech in Education</h1>
     <h2 class="subtitle">APUSH Social Issue Project</h2>
     <p class="text-box">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past, and especially in recent years, these freedoms have been the target of numerous other policies and social campaigns.</p>
+    <div class="button-container">
+      <button class="scroll-btn" id="issue-btn">The Issue</button>
+      <input type="text" class="text-box" id="issue-text" placeholder="Enter Issue Text (Optional)">
+      <button class="scroll-btn" id="history-btn">Historical Context</button>
+      <input type="text" class="text-box" id="history-text" placeholder="Enter Context Text (Optional)">
+      <button class="scroll-btn" id="solutions-btn">Solutions and the Future</button>
+      <input type="text" class="text-box" id="solutions-text" placeholder="Enter Solutions Text (Optional)">
+    </div>
   </div>
-  <p class="version-indicator">Version 1.0.4.5</p>
+  <div id="issue-section" class="section-content">
+    <h2>In Focus: The Issue of Free Speech in Education</h2>
+    <p>...</p>
+  </div>
+  <div id="history-section" class="section-content">
+    <h2>Echoes from the Past: Historical Context of Free Speech in Education</h2>
+    <p>...</p>
+  </div>
+  <div id="solutions-section" class="section-content">
+    <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
+    <p>...</p>
+  </div>
+  <p class="version-indicator">Version 1.1.0</p>
+  <script src="script.js"></script>
 </body>
 </html>
