--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
     <p>...</p>
   </div>
-  <p class="version-indicator">Version 1.1.5</p>
+  <p class="version-indicator">Version 1.1.23</p>
   <script src="script.js"></script>
+  <script src="buttonHover.js"></script>
 </body>
 </html>
