--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1 class="title">Freedom of Speech in Education</h1>
-    <h2 class="subtitle">APUSH Social Issue Project</h2>
+    <h2 class="subtitle">APUSH: A More Perfect Union</h2>
     <p class="text-box">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past, and especially in recent years, these freedoms have been the target of numerous other policies and social campaigns.</p>
     <div class="button-container">
       <button class="scroll-btn" id="issue-btn">The Issue</button>
@@ -29,7 +29,7 @@
     <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
     <p>...</p>
   </div>
-  <p class="version-indicator">Version 1.1.24</p>
+  <p class="version-indicator">Version 1.1.25</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
