--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Free Ed Awareness</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -29,7 +32,7 @@
     <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
     <p>...</p>
   </div>
-  <p class="version-indicator">Version 1.1.27</p>
+  <p class="version-indicator">Version 1.1.28</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
