--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">Freedom of Speech in Education</h1>
+    <h1 style=".reddit-mono-<?php echo uniqid('', true); ?> { font-family: "Reddit Mono", monospace; font-optical-sizing: auto; font-weight: <400>; font-style: normal; }">Freedom of Speech in Education</h1>
     <h2 class="subtitle">APUSH: A More Perfect Union</h2>
     <p class="text-box">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past, and especially in recent years, these freedoms have been the target of numerous other policies and social campaigns.</p>
     <div class="button-container">
@@ -32,7 +32,7 @@
     <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
     <p>...</p>
   </div>
-  <p class="version-indicator">Version 1.1.30</p>
+  <p class="version-indicator">Version 1.1.31</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
