--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Free Ed Awareness</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@400;700&display=swap">
 </head>
 <body>
   <div class="container">
-    <h1 style=".reddit-mono-<?php echo uniqid('', true); ?> { font-family: "Reddit Mono", monospace; font-optical-sizing: auto; font-weight: <400>; font-style: normal; }">Freedom of Speech in Education</h1>
+    <h1 class="title">Freedom of Speech in Education</h1>
     <h2 class="subtitle">APUSH: A More Perfect Union</h2>
     <p class="text-box">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past, and especially in recent years, these freedoms have been the target of numerous other policies and social campaigns.</p>
     <div class="button-container">
