--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1 class="title">Freedom of Speech in Education</h1>
     <h2 class="subtitle">APUSH: A More Perfect Union</h2>
-    <p class="subtitle">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past, and especially in recent years, these freedoms have been the target of numerous other policies and social campaigns.</p>
+    <p class="subtitle">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past--and especially in recent years--these freedoms have come under fire.</p>
     <div class="button-container">
       <button class="scroll-btn" id="issue-btn">The Issue</button>
       <button class="scroll-btn" id="history-btn">Historical Context</button>
@@ -30,7 +30,7 @@
     <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
     <p>...</p>
   </div>
-  <p class="version-indicator">Version 1.1.34</p>
+  <p class="version-indicator">Version 1.1.36</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
