--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 class="title">Freedom of Speech in Education</h1>
   <div class="container">
     <h2 class="subtitle">APUSH: A More Perfect Union</h2>
-    <p class="subtitle">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past-and especially in recent years-these freedoms have come under fire.</p>
+    <p class="subtitle2">Freedom to develop ideas, collaborate with peers, and express yourself in your educational environment is vital to developing both as a student and a person. In the past-and especially in recent years-these freedoms have come under fire.</p>
     <div class="button-container">
       <button class="scroll-btn" id="issue-btn">The Issue</button>
       <button class="scroll-btn" id="history-btn">Historical Context</button>
@@ -31,7 +31,7 @@
     <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
-  <p class="version-indicator">Version 1.3.65</p>
+  <p class="version-indicator">Version 1.3.66</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
