--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@
     </div>
     <div id="history-section" class="section-content">
       <h2>Echoes from the Past: Historical Context of Free Speech in Education</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>The right to free speech, enshrined in the First Amendment of the United States Constitution, has a complex relationship with American public schools. While students don't "shed their constitutional rights at the schoolhouse gate," as the landmark Supreme Court case Tinker v. Des Moines Independent Community School District (1969) famously declared, the court also recognized the need for schools to maintain order and a conducive learning environment. This delicate balance has been navigated through a series of court cases that continue to shape the boundaries of free speech in schools today.
+       
+       The First Amendment, ratified in 1791, was born from a desire to prevent government censorship and ensure a free flow of ideas. However, its application to schools remained largely untested until the 20th century. The landmark Tinker v. Des Moines case involved three students who wore black armbands to protest the Vietnam War. The court, in a 7-2 decision, ruled that the students' expression was protected speech as it did not cause a "material and substantial disruption" of school activities. This established the "Tinker test," a crucial benchmark for evaluating the permissibility of student speech in schools.
+       
+       Since Tinker, subsequent court cases have further refined the understanding of free speech in schools. In Bethel v. Fraser (1986), the court ruled that lewd or indecent speech, even if off-campus, could be restricted by schools if it had a negative impact on the school environment. Conversely, rulings like Morse v. Frederick (2007) limited student speech advocating for illegal drug use, highlighting the limitations on free speech within the school context.</p>
     </div>
     <div id="solutions-section" class="section-content">
      <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
    </div>
-  <p class="version-indicator">Version 1.3.78</p>
+  <p class="version-indicator">Version 1.3.79</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
