--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="content container">
     <div id="issue-section" class="section-content">
       <h2>In Focus: The Issue of Free Speech in Education</h2>
-      <p>The landscape of free speech in schools continues to evolve, facing new challenges in the age of social media and heightened political polarization. A 2022 Knight Foundation study**(https://knightfoundation.org/press/releases/knight-foundation-study-high-school-students-support-free-speech-and-are-comfortable-disagreeing-in-class-says-survey-of-10000/)** highlighted a concerning trend: political polarization has significantly curtailed open discourse, especially on political issues. This translates into school environments where students might feel hesitant to express dissenting viewpoints for fear of social repercussions from peers or even disciplinary action.</p>
+      <p>The landscape of free speech in schools continues to evolve, facing new challenges in the age of social media and heightened political polarization. A 2022 Knight Foundation study highlighted a concerning trend: political polarization has significantly curtailed open discourse, especially on political issues. This translates into school environments where students might feel hesitant to express dissenting viewpoints for fear of social repercussions from peers or even disciplinary action.</p>
 
       <p>Campus protests, a cornerstone of free speech expression, have also faced challenges. In the aftermath of events like the Gaza War, student protests advocating for Palestinian rights have encountered resistance from some administrations. These incidents raise questions about the line between protected free speech and creating a hostile environment for students with opposing viewpoints.</p>
       
@@ -42,10 +42,21 @@
     </div>
     <div id="solutions-section" class="section-content">
      <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Organizations like the American Civil Liberties Union (ACLU) and the Foundation for Individual Rights in Education (FIRE) are at the forefront of advocating for free speech rights in schools. The ACLU has a long history of legal challenges against censorship and restrictions on student expression. They provide legal support to students and educators facing disciplinary action for protected speech, and offer resources and guidance on navigating free speech issues in schools.
+
+      <p>Similarly, FIRE advocates for student and faculty rights on college campuses. They offer legal support, publish research on free speech issues, and maintain a database of campus free speech controversies.
+        
+      <p>Students have the power to protect free speech in our schools. Here are some ways they can take action:
+      <ul>
+        <li>Know your rights: Educating themselves about their First Amendment rights and relevant school policies is the first step.</li>
+        <li>Start a conversation: Organize respectful discussions with classmates and administrators about the importance of free speech in a learning environment.</li>
+        <li>Speak out: If they witness censorship or limitations on free speech, they can raise their concerns with teachers, principals, or school boards.</li>
+        <li>Seek support: Organizations like the ACLU and FIRE can offer guidance and support for students facing challenges related to free speech.</li>
+      </ul>
+      <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged.
     </div>
    </div>
-  <p class="version-indicator">Version 1.3.81</p>
+  <p class="version-indicator">Version 1.3.82</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
