--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     </div>
     <div id="solutions-section" class="section-content">
      <h2>A Look Ahead: Potential Solutions and the Future of Free Speech in Education</h2>
-      <p>Organizations like the American Civil Liberties Union (ACLU) and the Foundation for Individual Rights in Education (FIRE) are at the forefront of advocating for free speech rights in schools. The ACLU has a long history of legal challenges against censorship and restrictions on student expression. They provide legal support to students and educators facing disciplinary action for protected speech, and offer resources and guidance on navigating free speech issues in schools.
+      <p>Organizations like the American Civil Liberties Union (ACLU) and the Foundation for Individual Rights in Education (FIRE) are at the forefront of advocating for free speech rights in schools. The ACLU has a long history of legal challenges against censorship and restrictions on student expression. They provide legal support to students and educators facing disciplinary action for protected speech, and offer resources and guidance on navigating free speech issues in schools. </p>
 
-      <p>Similarly, FIRE advocates for student and faculty rights on college campuses. They offer legal support, publish research on free speech issues, and maintain a database of campus free speech controversies.
+      <p>Similarly, FIRE advocates for student and faculty rights on college campuses. They offer legal support, publish research on free speech issues, and maintain a database of campus free speech controversies.</p>
         
-      <p>Students have the power to protect free speech in our schools. Here are some ways they can take action:
+      <p>Students have the power to protect free speech in our schools. Here are some ways they can take action:</p>
       <ul>
         <li>Know your rights: Educating themselves about their First Amendment rights and relevant school policies is the first step.</li>
         <li>Start a conversation: Organize respectful discussions with classmates and administrators about the importance of free speech in a learning environment.</li>
         <li>Speak out: If they witness censorship or limitations on free speech, they can raise their concerns with teachers, principals, or school boards.</li>
         <li>Seek support: Organizations like the ACLU and FIRE can offer guidance and support for students facing challenges related to free speech.</li>
       </ul>
-      <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged.
+      <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged. </p>
     </div>
    </div>
   <p class="version-indicator">Version 1.3.82</p>
