--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="issue-section" class="section-content">
       <h2>In Focus: The Issue of Free Speech in Education</h2>
       <p>The landscape of free speech in schools continues to evolve, facing new challenges in the age of social media and heightened political polarization. A 2022 Knight Foundation study highlighted a concerning trend: political polarization has significantly curtailed open discourse, especially on political issues. This translates into school environments where students might feel hesitant to express dissenting viewpoints for fear of social repercussions from peers or even disciplinary action.</p>
-      <img scr="https://github.com/Jshrev/Apush/blob/4310048f2ace0888632d38958dcf6d281e90d6e5/webimage1.jpg" alt="Gaza protest encampment at Columbia University">
+      <img scr="https://9b16f79ca967fd0708d1-2713572fef44aa49ec323e813b06d2d9.ssl.cf2.rackcdn.com/1140x_a10-7_cTC/20210907ppAntiMask1LOC-1631102997.jpg" alt="Gaza protest encampment at Columbia University">
       <p>Campus protests, a cornerstone of free speech expression, have also faced challenges. In the aftermath of events like the Gaza War, student protests advocating for Palestinian rights have encountered resistance from some administrations. These incidents raise questions about the line between protected free speech and creating a hostile environment for students with opposing viewpoints.</p>
       
       <p>The growing conversation around gender identity has brought a new layer of complexity to free speech in schools. The use of preferred pronouns has become a point of contention, with some arguing it infringes on free speech rights. This debate highlights the need for a nuanced approach, balancing respect for student identities with the right to express personal beliefs.</p>
@@ -56,7 +56,7 @@
       <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged. </p>
     </div>
    </div>
-  <p class="version-indicator">Version 1.3.85</p>
+  <p class="version-indicator">Version 1.3.86</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
