--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="issue-section" class="section-content">
       <h2>In Focus: The Issue of Free Speech in Education</h2>
       <p>The landscape of free speech in schools continues to evolve, facing new challenges in the age of social media and heightened political polarization. A 2022 Knight Foundation study highlighted a concerning trend: political polarization has significantly curtailed open discourse, especially on political issues. This translates into school environments where students might feel hesitant to express dissenting viewpoints for fear of social repercussions from peers or even disciplinary action.</p>
+      <a href="https://ibb.co/p0t8LM5"><img src="https://i.ibb.co/RvxmDsd/IMG-0100.webp" alt="IMG-0100" border="0"></a>
       <!-- <img scr="placeholder" alt="REMEMBER TO PUT MY PICTURE HERE!!!!!!!!!!!!!"> -->
       <p>Campus protests, a cornerstone of free speech expression, have also faced challenges. In the aftermath of events like the Gaza War, student protests advocating for Palestinian rights have encountered resistance from some administrations. These incidents raise questions about the line between protected free speech and creating a hostile environment for students with opposing viewpoints.</p>
       
@@ -56,7 +57,7 @@
       <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged. </p>
     </div>
    </div>
-  <p class="version-indicator">Version 1.3.87</p>
+  <p class="version-indicator">Version 1.3.88</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
