--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>The growing conversation around gender identity has brought a new layer of complexity to free speech in schools. The use of preferred pronouns has become a point of contention, with some arguing it infringes on free speech rights. This debate highlights the need for a nuanced approach, balancing respect for student identities with the right to express personal beliefs.</p>
       
       <p>Book banning and restrictions on student expression regarding gender identity are another emerging challenge. School boards across the country have faced controversy over removing books dealing with LGBTQ+ themes from libraries, citing concerns about parental control and age-appropriateness. Similarly, some schools have implemented restrictions on students expressing their gender identity through clothing or hairstyles. These actions raise concerns about censorship and the suppression of diverse viewpoints within the school environment.</p>
-      <a href="https://ibb.co/kXyTf6Q"><img src="https://i.ibb.co/gJ78pFz/IMG-0103.jpg" alt="IMG-0103" border="0"></a>
+      <a href="https://ibb.co/6Z1ZxtF"><img src="https://i.ibb.co/VNQNZCT/IMG-0101.png" alt="IMG-0101" border="0"></a>
       <p>Finally, religious expression in schools continues to be a balancing act. While the right to religious freedom is protected, schools also have a responsibility to maintain neutrality. Cases involving Muslim students being denied prayer spaces or Christian students facing limitations on expressing their faith highlight the ongoing need for clear guidelines that respect both religious freedom and the separation of church and state in public schools.</p>
     </div>
     <div id="history-section" class="section-content">
@@ -57,7 +57,7 @@
       <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged. </p>
     </div>
    </div>
-  <p class="version-indicator">Version 1.3.89</p>
+  <p class="version-indicator">Version 1.3.90</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
