--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>Organizations like the American Civil Liberties Union (ACLU) and the Foundation for Individual Rights in Education (FIRE) are at the forefront of advocating for free speech rights in schools. The ACLU has a long history of legal challenges against censorship and restrictions on student expression. They provide legal support to students and educators facing disciplinary action for protected speech, and offer resources and guidance on navigating free speech issues in schools. </p>
       <a href="https://ibb.co/kXyTf6Q"><img src="https://i.ibb.co/gJ78pFz/IMG-0103.jpg" alt="IMG-0103" border="0" /></a>
       <p>Similarly, FIRE advocates for student and faculty rights on college campuses. They offer legal support, publish research on free speech issues, and maintain a database of campus free speech controversies.</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GNtLLgtpo6Y?si=TFgaoJRaUv6IXWku" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe id="videoFire" width="560" height="315" src="https://www.youtube.com/embed/GNtLLgtpo6Y?si=TFgaoJRaUv6IXWku" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <p>Students have the power to protect free speech in our schools. Here are some ways they can take action:</p>
       <ul>
         <li>Know your rights: Educating themselves about their First Amendment rights and relevant school policies is the first step.</li>
@@ -57,7 +57,7 @@
       <p>By taking these steps, students can play a vital role in ensuring that schools remain places where open dialogue, critical thinking, and diverse viewpoints are not only tolerated but encouraged. </p>
     </div>
    </div>
-  <p class="version-indicator">Version 1.3.91</p>
+  <p class="version-indicator">Version 1.3.92</p>
   <script src="script.js"></script>
   <script src="buttonHover.js"></script>
 </body>
